@@ -1,3 +1,8 @@
+2006-07-14  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/28343
+	* g++.dg/ext/asmspec1.C: New test.
+
 2006-07-13  Janis Johnson  <janis187@us.ibm.com>
 
 	* lib/gcc-dg.exp (tool_load): Wrapper to support shouldfail tests.
